--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   </head>
   <body>
 
+    <book-connect></book-connect>
+
     <header class="header">
       <div class="header__inner">
         <div class="header__logo">
